refactor - migrate Boson DHT from NIO to Vert.x, improve async handling